# AutoFocusNet

./: .gitignore  1 - Download.ipynb  2 - DecodeFocus-Parallel.ipynb  Searched_products.xlsx  focus.ipynb  install_bash.sh  pyproject.toml  quickstart.ipynb  readme.md  requirements.txt  setup.py  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  publish_to_Dockerhub.sh
.github/workflows/: python-publish.yml
Data/SANPAOLO/: Searched_products.xlsx
Data/SANPAOLO/S1A_S3_RAW__0SDH_20240524T213606_20240524T213631_054018_069139_241A.SAFE/: manifest.safe
Data/SANPAOLO/S1A_S3_RAW__0SDH_20240524T213606_20240524T213631_054018_069139_241A.SAFE/support/: s1-level-0-annot.xsd  s1-level-0-index.xsd  s1-level-0.xsd
SARLens/autofocus/: compressor.py  metrics.py
SARLens/processor/: DFT.py  __init__.py  backup_metahandler.py  constants.py  decode.py  focus.py  rda_simple.py  tmp.ipynb
SARLens/processor/SRC/: l0decoder.py
SARLens/utils/: __init__.py  io.py  printsummary.py  unzip.py
SARLens/utils/downloader/: search.py  unzipper.py
notebooks/: 0. Test_Eff_Radar_Vel.ipynb  1. RichHall.ipynb  OPER - decoder.ipynb  OPER - downloader.ipynb  tile_focalizer.ipynb
playground/: SLC_RAW_Matching.ipynb  banan_conv.ipynb  names.ipynb  power_tester.ipynb  rda_tester.ipynb  torch.ipynb
runscripts/: chain.sh  decoder.sh  install_bash.sh  launch_decoder.sh
